# AIvestor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Test.py  docker-compose.yml  pyproject.toml
aivestor/: __init__.py  baselines.py  config.py  evaluation.py  metrics.py  splits.py
aivestor/api/: __init__.py  __main__.py  app.py  service.py
aivestor/backtest/: __init__.py  costs.py  engine.py
aivestor/data/: __init__.py  async_yahoo.py  loader.py  schema.py  yahoo.py
aivestor/db/: __init__.py  models.py  repository.py  session.py
aivestor/rl/: __init__.py  env.py  rollout.py
aivestor/scripts/: __init__.py  evaluate.py  fetch_data.py  init_db.py  train_rl.py
docs/: DEMO.md
infra/: azure-setup.md
scripts/: deploy-azure.sh  docker-entrypoint.sh
tests/: test_backtest.py  test_baselines.py  test_env.py  test_loader.py  test_metrics.py  test_splits.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.ts  style.css
